# network-manager-openconnect

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  configure.in  import-strings.sh  network-manager-openconnect.doap  nm-openconnect-service.conf  nm-openconnect-service.name.in  openconnect-strings.txt
appdata/: network-manager-openconnect.appdata.xml.in  network-manager-openconnect.metainfo.xml.in
auth-dialog/: Makefile.am  README  main.c
m4/: compiler_warnings.m4
po/: ChangeLog  LINGUAS  POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bg_BG.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_CR.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gd.po  gl.po  (+73 more)
properties/: Makefile.am  auth-helpers.c  auth-helpers.h  libnm-vpn-plugin-openconnect-editor.ver  nm-openconnect-dialog.glade  nm-openconnect-dialog.ui  nm-openconnect-editor-plugin.c  nm-openconnect-editor-plugin.h  nm-openconnect-editor.c  nm-openconnect-editor.h  nm-openconnect.c  nm-openconnect.h
shared/: Makefile.am  nm-default.h  nm-service-defines.h
shared/nm-utils/: nm-macros-internal.h  nm-vpn-plugin-macros.h
src/: .cvsignore  Makefile.am  nm-openconnect-service-defines.h  nm-openconnect-service-openconnect-helper.c  nm-openconnect-service.c  nm-openconnect-service.h
